# lidar-scan

./: .gitlab-ci.yml  Dockerfile  README.md  lidar_start.sh
src/lidar_scan/: CMakeLists.txt  package.xml
src/lidar_scan/config/: icp_slam.ini  lidar_process.ini  service.yaml
src/lidar_scan/include/: DouglasPeucker.h  iniparser.h  lidar_scan.h  polygon.h
src/lidar_scan/launch/: lidar_scan.launch  rosbag.launch
src/lidar_scan/output/: 1700905098.txt
src/lidar_scan/rviz/: rviz_sick.rviz
src/lidar_scan/src/process/: DouglasPeucker.cpp  iniparser.c  polygon.cpp  process_main.cpp
src/lidar_scan/src/radio/: radio_main.cpp
src/lidar_scan/srv/: ScanCommand.srv
