<?xml version="1.0"?>
<package format="2">
  <name>lidar_scan</name>
  <version>1.0.0</version>
  <description>Lidar Scan Object</description>
  <maintainer email="minhhoai.ik@gmail.com">Hoai Tran</maintainer>

  <license>BSD</license>

  <author>Hoai Tran</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>mrpt2</depend>

  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>mrpt_rawlog</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
